# mypy-segmentation-fault

./: mypy_segmentation_fault.py  pyproject.toml
