[tool.poetry]
name = "mypy-segmentation-fault"
version = "0.1.0"
description = ""
authors = ["Ryo Tagami <rtagami@airstrip.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
injector = "^0.21.0"
mypy = "1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
